fix(storybook): Prevent closed mobile inpage navigation from overlapping other items on the page Card: https://app.clickup.com/t/863h4kyxv

--- a/src/styles/elements/_inpage-nav.css
+++ b/src/styles/elements/_inpage-nav.css
@@ -368,6 +368,17 @@ a.inpage-nav__link:hover {
     --inpage-nav-link-color: var(--color-primary);
 }
 
+.inpage-nav[ismobile] .inpage-nav__nav {
+    pointer-events: none;
+    opacity: 0;
+    border: 10px solid red;
+}
+
+.inpage-nav[ismobile][mobileopen] .inpage-nav__nav {
+    pointer-events: all;
+    border: 10px solid blue;
+}
+
 @media (hover: hover) {
     .inpage-nav[ismobile] .inpage-nav__toggle:hover {
         --inpage-nav-toggle-icon-color: var(--color-primary-dark);
